frontend/styles.css
.newsapi_image {
    object-fit: cover;
    height: 100px;
    width: 100px;
    margin-top: 4px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
}

.newsapi_round_border {
    height: 110px;
    width: 110px;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border: 1px solid white;
}

.newsapi_round_border_helper {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

.newsapi_image_div {
    padding: 5px;
    padding-bottom: 0px;
    margin-top: -5px;
    background-color: white;
    margin-right: 12px;
}

.newsapi_qr_code {
    margin-left: 12px;
    margin-right: 12px;
}

.newsapi_source {
    margin-right: 12px;
}

td.newsapi_icon {
    background: url("../assets/rss.svg") no-repeat;
    width: 20px;
    margin-right: 5px;
    margin-top: 10px !important;
}

tr td table {
    text-align: left;
}

